# Kruskal-Algorithm

./: .clang-format  .gitignore  .gitmodules  Application.cpp  Application.h  ApplicationGUI.cpp  ApplicationGUI.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationKernel.cpp  ApplicationKernel.h  CMakeLists.txt  DisjointSet.cpp  DisjointSet.h  Graph.cpp  Graph.h  QApp.pro  QObserver.h  QPorts.cpp  QPorts.h  QRunTime.cpp  QRunTime.h  README.md  conanfile.txt  dialog.cpp  dialog.h  except.cpp  except.h  main.cpp  test.cpp  test.h  testDisjointSet.cpp  testDisjointSet.h  testGraph.cpp  testGraph.h
Interface/: GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlotController.cpp  PlotController.h  PlotView.cpp  PlotView.h  TableView.cpp  TableView.h  TextView.h  View.cpp  View.h
Kernel/: Algorithm.cpp  Algorithm.h  AlgorithmAction.h  AlgorithmAnimator.cpp  AlgorithmAnimator.h  AlgorithmController.cpp  AlgorithmController.h  AlgorithmModel.cpp  AlgorithmModel.h  DisjointSet.cpp  DisjointSet.h  DrawData.h  EdgeStatus.h  Field.cpp  Field.h  FieldController.cpp  FieldController.h  FieldModel.cpp  FieldModel.h  GeomModel.cpp  GeomModel.h  Graph.cpp  Graph.h  GraphGeomModel.cpp  GraphGeomModel.h  GraphModel.h  ItemAction.h  ItemAnimator.cpp  ItemAnimator.h  LogicModel.cpp  LogicModel.h  MouseAction.h  NodeAnimator.cpp  NodeAnimator.h  NodeStatus.h  Palette.cpp  Palette.h
